# workspace

./: README.md
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh
catkin_ws/devel/lib/pkgconfig/: mobile_manipulator_body.pc  navigation_testing.pc  rosbot_bringup.pc  rosbot_description.pc  rosbot_gazebo.pc  rosbot_navigation.pc
catkin_ws/devel/share/mobile_manipulator_body/cmake/: mobile_manipulator_bodyConfig.cmake
catkin_ws/devel/share/navigation_testing/cmake/: navigation_testingConfig.cmake
catkin_ws/devel/share/rosbot_bringup/cmake/: rosbot_bringupConfig.cmake
catkin_ws/devel/share/rosbot_description/cmake/: rosbot_descriptionConfig.cmake
catkin_ws/devel/share/rosbot_gazebo/cmake/: rosbot_gazeboConfig.cmake
catkin_ws/devel/share/rosbot_navigation/cmake/: rosbot_navigationConfig.cmake
catkin_ws/src/mobile_manipulator_body/: package.xml
ros_ws/: left0000.ini
ros_ws/devel/: .catkin  .rosinstall
ros_ws/devel/lib/pkgconfig/: navigation_testing.pc  rosbot_bringup.pc  rosbot_description.pc  rosbot_gazebo.pc  rosbot_navigation.pc  tutorial_pkg.pc
ros_ws/devel/lib/tutorial_pkg/: my_first_node
ros_ws/devel/share/navigation_testing/cmake/: navigation_testingConfig.cmake
ros_ws/devel/share/rosbot_bringup/cmake/: rosbot_bringupConfig.cmake
ros_ws/devel/share/rosbot_description/cmake/: rosbot_descriptionConfig.cmake
ros_ws/devel/share/rosbot_gazebo/cmake/: rosbot_gazeboConfig.cmake
ros_ws/devel/share/rosbot_navigation/cmake/: rosbot_navigationConfig.cmake
ros_ws/src/tutorial_pkg/: CMakeLists.txt
ros_ws/src/tutorial_pkg/src/: test.cpp
(+7 files in other folders)
